--- a/src/contacts.html
+++ b/src/contacts.html
@@ -6,9 +6,13 @@
 {% set color = "#ffffff" %}
 {% extends "src/templates/layout.html" %}
 {% block main %}
-  <div class="hero">
-    <div class="container">
-      <div class="hero__title">Contacts</div>
-    </div>
-  </div>
+
+<div class="hero">
+	<div class="container">
+		<div class="hero__content">
+			<div class="hero__title">Contacts Hero</div>
+		</div>
+	</div>
+</div>
+
 {% endblock %}
