--- a/src/index.html
+++ b/src/index.html
@@ -7,44 +7,57 @@
 {% extends "src/templates/layout.html" %}
 {% block main %}
 
-  <div class="hero">
-    <div class="container">
-      <div class="hero__content">
-        <div class="hero__title">Hero</div>
-      </div>
-    </div>
-  </div>
+<div class="hero">
+	<div class="container">
+		<div class="hero__content">
+			<div class="hero__title">Index Hero</div>
+		</div>
+	</div>
+</div>
 
-  <div class="section" section>
-    <div class="container">
-      <div class="section__content">
-        <div class="section__title">01</div>
-      </div>
-    </div>
-  </div>
+<div class="section" section>
+	<div class="container">
+		<div class="section__content">
+			<div class="section__time"></div>
+			<div class="section__title">I'm a component</div>
+		</div>
+	</div>
+</div>
 
-  <div class="section" section>
-    <div class="container">
-      <div class="section__content">
-        <div class="section__title">02</div>
-      </div>
-    </div>
-  </div>
+<div class="section" lazy-section>
+	<div class="container">
+		<div class="section__content">
+			<div class="section__time"></div>
+			<div class="section__title">I'm a lazy loaded component</div>
+		</div>
+	</div>
+</div>
 
-  <div class="section" section>
-    <div class="container">
-      <div class="section__content">
-        <div class="section__title">03</div>
-      </div>
-    </div>
-  </div>
+<div class="section" section>
+	<div class="container">
+		<div class="section__content">
+			<div class="section__time"></div>
+			<div class="section__title">I'm a component</div>
+		</div>
+	</div>
+</div>
 
-  <div class="section" lazy-section>
-    <div class="container">
-      <div class="section__content">
-        <div class="section__title">04</div>
-      </div>
-    </div>
-  </div>
+<div class="section" lazy-section>
+	<div class="container">
+		<div class="section__content">
+			<div class="section__time"></div>
+			<div class="section__title">I'm a lazy loaded component</div>
+		</div>
+	</div>
+</div>
+
+<div class="section" section>
+	<div class="container">
+		<div class="section__content">
+			<div class="section__time"></div>
+			<div class="section__title">I'm a component</div>
+		</div>
+	</div>
+</div>
 
 {% endblock %}
