--- a/src/index.html
+++ b/src/index.html
@@ -60,4 +60,17 @@
 	</div>
 </div>
 
+{% for i in [1,2,3,4,5,6,7,8,9,10] -%}
+
+<div class="section" section>
+	<div class="container">
+		<div class="section__content">
+			<div class="section__time"></div>
+			<div class="section__title">I'm a component</div>
+		</div>
+	</div>
+</div>
+
+{%- endfor %}
+
 {% endblock %}
